Project

General

Profile

Actions

Bug #50201

closed

rgw admin hides sync enable/disable failure on non-master

Added by Yuval Lifshitz about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Low
Target version:
-
% Done:

0%

Source:
Development
Tags:
multisite
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

command does not show error when tried on non-master zone


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #50463: pacific: rgw admin hides sync enable/disable failure on non-masterResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 40639
Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50463: pacific: rgw admin hides sync enable/disable failure on non-master added
Actions #4

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF